<resources>
    <string name="app_name">ChatApp</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="profile">Profile</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="not_have_account_register">Not have account? Register</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="home">Home</string>
    <string name="users">Users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search">Search</string>
    <string name="chat_list">Chat List</string>
    <string name="message">Message</string>
    <string name="start_typing" translatable="false">Start typing</string>
    <string name="new_message">New message</string>
    <string name="add_post">Add Post</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter description</string>
    <string name="post">Post</string>
    <string name="update_password">Update Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="group_title">Group Title</string>
    <string name="group_description">Group Description</string>
</resources>