<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout" />

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_post"
        android:title="@string/add_post"
        app:showAsAction="always"
        android:icon="@drawable/ic_add_white"/>

    <item android:id="@+id/action_create_group"
        android:title="Create Group"
        app:showAsAction="always"
        android:icon="@drawable/ic_create_group_white"/>
</menu>