<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical">

        <!--EditText: post title-->
        <EditText
            android:id="@+id/postTitleEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/editextstyle"
            android:hint="@string/enter_title"
            android:padding="10dp"
            android:singleLine="true" />

        <!--ImageView: post image-->
        <ImageView
            android:id="@+id/postImageIv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_dark"
            android:minHeight="200dp" />

        <!--EditText: description-->
        <EditText
            android:id="@+id/postDescriptionEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/editextstyle"
            android:gravity="start"
            android:hint="@string/enter_description"
            android:inputType="textCapSentences|textMultiLine"
            android:minHeight="120dp"
            android:padding="10dp" />

        <!--Button: publish post to firebase-->
        <Button
            android:id="@+id/postUploadBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/post"/>
    </LinearLayout>
</ScrollView>